# IntrOS-ATtiny817-Xplained-Mini

./: .avr-gcc-build.sh  .build-avr-gcc.sh  .build-avr-libc.sh  .build-binutils.sh  .gitmodules  .travis.yml  CMakeLists.txt  README.md  makefile  makefile.gcc
.dev/attiny817/device-specs/: specs-attiny817
.github/workflows/: test.yml
IntrOS/kernel/AVR8/: oscore.h
IntrOS/port/ATTINY817/: osport.c  osport.h
IntrOS/port/AVR8/: oscore.h  osdefs.h
avr/: iomxx4.h  iotn102.h  iotn104.h  iotn1614.h  iotn1616.h  iotn1617.h  iotn1634.h  iotn212.h  iotn214.h  iotn3214.h  iotn3216.h  iotn3217.h  iotn412.h  iotn414.h  iotn416.h  iotn417.h  iotn441.h  iotn80.h  iotn814.h  iotn816.h  iotn817.h  iotn828.h  iotn840.h  iotn841.h
device/: btn.h  init.c  init.h  led.h
include/: osconfig.h
src/: main.c  main.cpp  osconfig.h
